# dot-flik

./: CMakeLists.txt  LICENSE  README.md
CameraStreamer/: CMakeLists.txt  CameraStreamer.cpp  README.md  cameraWifiStream.cpp  testFormat.cpp
VideoProcessing/: CMakeLists.txt  HyperpTuning.cpp  README.md  StressTest.cpp  VideoFiltering.cpp  VideoProcessing.cpp
fullPipeline/: CMakeLists.txt  README.md  fullPipeline.cpp  fullPipeline_externalVideos.cpp  fullPipeline_profile.cpp  fullPipeline_threaded.cpp  fullPipeline_threaded_profile.cpp
libs/: CMakeLists.txt
libs/motionLib/: CMakeLists.txt
libs/motionLib/include/motionLib/: motionLib.hpp
libs/motionLib/src/: motionLib.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: utils.hpp
libs/utils/src/: utils.cpp
